--- a/bai/css/bai.css
+++ b/bai/css/bai.css
@@ -8,7 +8,7 @@ body {
 a {
 	color: $acolor$;
 	cursor: pointer;
-	text-decoration: underline;
+	text-decoration: none;
 }
 
 button {
@@ -166,7 +166,6 @@ textarea {
 }
 
 header, footer {
-	overflow: hidden;
 	clear: both;
 }
 
@@ -315,3 +314,30 @@ footer nav a { /* 页脚链接 */
 	width: 900px;
 }
 /*--- 宽度 ---*/
+
+.header {
+	clear:both;
+	position: relative;
+	background: #f0f9f0;
+	border-top: 1px solid #cceccc;
+	text-align: right;
+	border-bottom: 2px solid #99cc99;
+}
+.header .logo {
+	float: left;
+}
+.header a {
+	position: relative;
+	display: inline-block;
+	font-size: 20px;
+	line-height: 36px;
+	height: 36px;
+	min-width: 36px;
+	padding: 6px;
+	color: #008000;
+}
+.header a.on, .header a:hover {
+	background: #f0fff0;
+	border-bottom: 2px solid #f04000;
+	margin-bottom: -2px;
+}
