--- a/bai/css/bai.css
+++ b/bai/css/bai.css
@@ -12,7 +12,6 @@ a {
 }
 
 a:hover {
-	text-decoration: underline;
 }
 
 button {
@@ -128,7 +127,7 @@ textarea {
 }
 
 .f {
-	padding: 0.3em 0.5em;
+	padding: 0.5em;
 	text-align: right;
 	border-top: 1px solid $lightline$;
 }
@@ -412,14 +411,19 @@ header, footer {
 	background-color: #ffffff;
 }
 .bubble .title {
-	padding: 0.3em;
-	font-size: 1.5em;
+	padding: 0.4em;
+	font-size: 1.25em;
 	font-weight: bold;
 	background-color: $darkarea$;
 	border-bottom: 1px solid $darkline$;
 }
 .bubble .content {
 	padding: 1em;
+}
+.bubble .toolbar {
+	padding: 0.5em 1em;
+	background-color: $lightarea$;
+	border-top: 1px solid $lightline$;
 }
 
 .button {
@@ -428,10 +432,16 @@ header, footer {
 }
 .button:hover {
 	background-color: $lightline$;
+	
 }
 .default {
 	border: 1px solid $lightline$;
 }
 .default:hover {
 	border: 1px solid $darkline$;
+}
+.close {
+	margin: 0.4em;
+	padding: 0 0.2em;
+	font-size: 1.25em;
 }
